# permute

./: LICENSE  permute.cabal
Text/ParserCombinators/: Perm.hs
